import com.github.gradle.node.npm.task.NpmTask

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.16'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.github.node-gradle.node' version '7.1.0'
    id 'jacoco'
    id 'org.sonarqube' version '7.3.1.8318'
}

group = 'schaefinik'
version = '0.0.2-ALPHA'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.named('clean') {
    delete "${project.projectDir}/src/main/resources/static/assets"
    delete "${project.projectDir}/src/main/resources/static/index.html"
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    failOnNoDiscoveredTests = true
}

tasks.register('deepClean', Delete) {
    dependsOn 'clean'
    delete "${project.projectDir}/frontend/node_modules"
    delete "${project.projectDir}/frontend/dist"
    delete "${project.projectDir}/src/main/resources/static"
}

tasks.register('dbStop', Exec) {
    workingDir ".."
    ignoreExitValue true
    commandLine 'docker-compose', 'down', '-v'
}

tasks.register('dbStart', Exec) {
    workingDir ".."
    commandLine 'docker-compose', 'up', '-d', 'db'
}

tasks.register('dbReset') {
    group = 'database'
    description = 'Stoppt die DB, löscht alle Daten und startet sie neu.'
    dependsOn 'dbStop', 'dbStart'
    dbStart.mustRunAfter dbStop
    doLast {
        println "Datenbank wurde erfolgreich zurückgesetzt."
    }
}

tasks.register('devBuild') {
    group = 'build'
    dependsOn 'processResources'
    doLast {
        println "Projekt ist bereit für ./gradlew bootRun"
    }
}

tasks.named('sonar') {
    dependsOn tasks.named('jacocoTestReport')
}

node {
    version = '22.18.0'
    download = true
    nodeProjectDir = file("${project.projectDir}/frontend")
}

tasks.named('processResources') {
    dependsOn 'copyFrontendToStatic'
}

tasks.register('copyFrontendToStatic', Copy) {
    dependsOn 'buildFrontend'
    from("${project.projectDir}/frontend/dist")
    into("${project.projectDir}/src/main/resources/static")
}

tasks.register('buildFrontend', NpmTask) {
    dependsOn 'npmInstall'
    args = ['run', 'build']
}

tasks.register('testFrontend', NpmTask) {
    dependsOn 'npmInstall'
    args = ['run', 'test:unit', '--', '--coverage']
}

jacocoTestReport {
    dependsOn test
    reports {
        html.required = true
        xml.required = true
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir('reports/jacoco/html')
    }

    classDirectories.setFrom(
            files(classDirectories.files.collect {
                fileTree(dir: it, exclude: [
                        '**/dto/**',
                        '**/config/**',
                        '**/entity/**',
                        '**/exception/**',
                        '**/*Application.*'
                ])
            })
    )
}

sonar {
    properties {
        property "sonar.projectKey", "time-management-tool"
        property "sonar.projectName", "Time Management Tool"

        property "sonar.sources", "src/main/java,frontend/src"

        property "sonar.exclusions", "**/frontend/src/assets/**, **/*.png, **/*.jpg, **/*.svg, **/node_modules/**"

        property "sonar.coverage.jacoco.xmlReportPaths", "${layout.buildDirectory.get().asFile}/reports/jacoco/test/jacocoTestReport.xml"
        property "sonar.javascript.lcov.reportPaths", "frontend/coverage/lcov.info"
    }
}

test {
    dependsOn 'testFrontend'
    jvmArgs '-XX:+EnableDynamicAgentLoading'
    finalizedBy jacocoTestReport
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
    implementation 'org.apache.poi:poi-ooxml:5.2.5'
    implementation 'com.itextpdf:itext7-core:8.0.3'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'

    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
    runtimeOnly 'org.postgresql:postgresql'

    compileOnly 'org.projectlombok:lombok:1.18.34'

    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    annotationProcessor 'org.projectlombok:lombok'

    testCompileOnly 'org.projectlombok:lombok:1.18.34'

    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'com.h2database:h2'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}